# dumptruck

./: .gitmodules  LICENSE  README.md
designdocs/dumptruck/: Board design.md  DUT connector.md  Design Goals.md  Design Overview.md  FPGA IO bank assignments.md  I2C address map.md  Power Budget.md
dut-breakouts/dfn8-small-qspi/: README.md  dfn8-small-qspi.kicad_pcb  dfn8-small-qspi.kicad_pro  (+1 more)
firmware/main/bsp/: CMakeLists.txt  FPGATask.cpp  FPGATask.h  TwentyHzTimerTask.cpp  TwentyHzTimerTask.h  common-vectors.cpp  hwinit.cpp  hwinit.h
firmware/main/main/: CMakeLists.txt  DumptruckCLISessionContext.cpp  DumptruckCLISessionContext.h  DumptruckSFTPServer.cpp  DumptruckSFTPServer.h  DumptruckSSHTransportServer.cpp  DumptruckSSHTransportServer.h  DumptruckTCPProtocol.cpp  DumptruckTCPProtocol.h  DumptruckUDPProtocol.cpp  DumptruckUDPProtocol.h  FPGAFlashDumper.h  FlashDumper.h  Init.cpp  LocalConsoleTask.h  NullFlashDumper.h  SPIFlashDumper.h  SocketDetectionTask.cpp  SocketDetectionTask.h  SocketedFlashDumper.cpp  SocketedFlashDumper.h  ZeroFlashDumper.h  dumptruck.h  firmware.ld  globals.cpp  vectors.cpp
jtag-interposer/: .gitignore  jtag-interposer.kicad_pcb  jtag-interposer.kicad_pro  jtag-interposer.kicad_sch
main-pcb/: .gitignore  1v2_vccio.kicad_sch  1v8_vccio.kicad_sch  2v5_vccio.kicad_sch  3v3_vccio.kicad_sch  ethernet.kicad_sch  fpgasupport.kicad_sch  main-pcb.kicad_pcb  main-pcb.kicad_pro  main-pcb.kicad_sch  mcu.kicad_sch  psu.kicad_sch  rgb.kicad_sch
rtl/: .gitignore  dumptruck.xpr  hwserver.sh
sims/: flex-50.son  inner_se_50.son  outer_se_50.son
(+98 files in other folders)
